<resources>
    <string name="app_name">Basic Workout Tracker</string>
    <string name="push">Push</string>
    <string name="flex">Flex</string>
    <string name="leg">Leg</string>
    <string name="pull">Pull</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="workoutNotes">Put in Workout notes</string>
    <string name="notes">Notes:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>