<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/workoutPush"
            style="@style/buttenBlue"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:text="@string/push"
            app:layout_constraintEnd_toStartOf="@+id/workoutPull"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motivation_drawable" />

        <Button
            android:id="@+id/workoutIndividual"
            style="@style/buttenBlue"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="52dp"
            android:text="@string/flex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/workoutLeg"
            app:layout_constraintTop_toBottomOf="@+id/workoutPull" />

        <Button
            android:id="@+id/workoutLeg"
            style="@style/buttenBlue"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="52dp"
            android:text="@string/leg"
            app:layout_constraintEnd_toStartOf="@+id/workoutIndividual"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutPush" />

        <Button
            android:id="@+id/workoutPull"
            style="@style/buttenBlue"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/pull"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/workoutPush"
            app:layout_constraintTop_toTopOf="@+id/workoutPush" />

        <ImageView
            android:id="@+id/motivation_drawable"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arnold"
            />

        <!-- Leeres View-Element für White Space -->
        <View
            android:id="@+id/white_space"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/workoutIndividual"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
